# Demo

./: .gitignore  .robot_sn  README.md  package.xml  requirements.txt
.github/workflows/: python-multiplatform.yml
.trae/: TODO.md
.trae/rules/: project_rules.md
app/: main.py
app/config/: constants.py  settings.py
app/control/: device_manager.py  fileio_manager.py  gripper_control.py  maintenance_manager.py  primitive_manager.py  robot_control.py  safety_manager.py  scheduler_manager.py  serial_comm.py  workcoord_manager.py
app/core/: base_control.py  exception_recovery.py  fault_manager.py  hardware_control.py  health_monitor.py  resource_manager.py  robot_factory.py  signal_manager.py  simulator_control.py  thread_manager.py
app/model/: mesh_loader.py  robot_model.py
app/ui/: advanced_control_widget.py  global_vars_widget.py  main_window.ui  main_window_modern.py  primitive_control_widget.py
app/ui/widgets/: gl_renderer.py  intelligent_task_panel.py  monitoring_panel.py  robot_control_panel.py  visualization_panel.py
app/utils/: __init__.py  kinematics.py  ui_utils.py  urdf_parser.py
app/utils/core/: config_manager.py  logger.py  (+1 more)
app/visualization/: gl_renderer.py  mesh_loader.py  urdf_parser.py
archive/: README.md  URDF_SYNC_GUIDE.md  URDF_SYNC_SOLUTION.md  debug_urdf_sync.py  examples_README.md  test_sync_urdf_detailed.py  test_urdf_sync.py  test_urdf_sync_final.py  urdf_sync_example.py
docs/: Flexiv RDK APIs.md  Flexiv RDK Manual.md
launch/: demo.launch
resources/urdf/: flexiv_rizon10_kinematics.urdf  flexiv_rizon4s_kinematics.urdf
